--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -389,6 +389,10 @@ ul#milestone-list {
 
     > li {
 
+        h2.title {
+            padding-left: 25px;
+        }
+
         position: relative;
         border-radius: 10px;
         text-align: left;
