--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -91,3 +91,16 @@ body {
     padding-left: 5px;
     font-weight: bold;
 }
+
+.search-result {
+    padding: 5px;
+    .glyphicon {
+        font-size: 14px;
+    }
+}
+.search-image {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
