--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -1,9 +1,3 @@
-<style>
-  h2 {
-    position: relative;
-    left: 25px;
-  }
-</style>
 <% if @milestones and not @milestones.empty? %>
     <div id="timeline-card" class="card timeline">
       <ul id="milestone-list">
@@ -27,7 +21,7 @@
                       <span class="milestone-highlight small false"></span>
                     <%end%>
                   <%end%>
-                    <h2><%=link_to e.title, e, method: :get%></h2>
+                    <h2 class="title"><%=link_to e.title, e, method: :get%></h2>
                 <%else%>
                     <% if can_modify_milestone?e.id %>
                       <%= milestone_highlight(e)%>
@@ -38,7 +32,7 @@
                         <span class="milestone-highlight small false"></span>
                       <%end%>
                     <%end%>
-                    <strike><h2><%=link_to e.title, e, method: :get%></h2></strike>
+                    <strike><h2 class="title"><%=link_to e.title, e, method: :get%></h2></strike>
                 <%end%>
               </div>
               <div class="col-xs-2">
