--- a/app/views/collections/_innerform.html.erb
+++ b/app/views/collections/_innerform.html.erb
@@ -21,18 +21,52 @@
   </div>
 
   <div class="row">
-    <div class="form-group col-xs-8">
+    <div class="form-group col-xs-6">
       <%= m.label t('collections.new.templates.template'), class: "control-label" %>
-
-      <%= select_tag(:template, options_from_collection_for_select(@templates, :id, :title), :multiple => false,
-                     class: "chzn-select", 'data-placeholder'=> t('collections.new.templates.select'), 'style'=> 'width:100%') %>
-
     </div>
-    <div class="form-group col-xs-4">
+    <div class="form-group col-xs-3">
       <%= m.label t('collections.new.templates.days'), class: "control-label" %>
-      <%= number_field_tag 'days', 0, in: 0...5000 %>
     </div>
   </div>
 
+  <div id="tempTable">
+    <input type="hidden" id="count" name="count" value="0">
+    
+  </div>
+
+
+  <div class="row">
+    <div class="form-group col-xs-6">
+      <%= select_tag(:template, options_from_collection_for_select(@templates, :id, :title), :multiple => false,
+                     class: "chzn-select", id: "tName",'data-placeholder'=> t('collections.new.templates.select'), 'style'=> 'width:100%') %>
+    </div>
+    <div class="form-group col-xs-3">
+      <%= number_field_tag 'days', 0, in: 0...5000, class: "form-control", id: "tDay" %>
+    </div>
+    <div class="form-group col-xs-3">
+      <p id="addTemp" style="background-color: lightgrey;" ><b>Add</b></p>
+    </div>
+  </div>
+
+
+
   <%= m.button t('collections.new.submit'), :type => 'submit', class: "btn btn-default" %>
 </div>
+
+<script>
+    $("#addTemp").click(function() {
+        var select = document.getElementById("tName");
+        var days = document.getElementById("tday");
+        //var tableTemps = document.getElementById("tempTable");
+        var count = document.getElementById("count");
+
+        count.value = parseInt(count.value) +1;
+
+        /*var row = "<div class=\"row\"> <div class=\"form-group col-xs-6\"> <input type=\"text\" name=\"temp";
+        row.concat(count.value);
+        row.concat("\" value=\"");
+        row.concat(select.value);
+        row.concat("\" class=\"form-control\" disabled> </div> <div class=\"form-group col-xs-3\"> <input type=\"number\" name=\"temp")*/
+        $("#tempTable").append("<div class=\"row\"> <div class=\"form-group col-xs-6\"> <input type=\"text\" name=\"temp0\" value=\"template1\" class=\"form-control\" disabled> </div> <div class=\"form-group col-xs-3\"> <input type=\"number\" name=\"days0\" value=\"0\" class=\"form-control\" disabled> </div> </div>")
+    });
+</script>
