--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -74,7 +74,7 @@
               <div class="form-group col-xs-6">
                 <%= f.label t('milestones.start_date'), class: "control-label" %>
                 <div class="input-group">
-                  <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
+                  <%= f.text_field :start_date, class: "form-control submit-on-enter", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
                   <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
                 </div>
               </div>
@@ -82,15 +82,10 @@
               <div class="form-group col-xs-6">
                 <%= f.label t('milestones.due_date'), class: "control-label" %>
                 <div class="input-group">
-                  <%= f.text_field :due_date, class: "form-control" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
+                  <%= f.text_field :due_date, class: "form-control submit-on-enter" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
                   <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
                 </div>
               </div>
-
-              <div class="btn pull-right">
-                <%= f.button t('milestones.edit.submit'),:type => 'submit', class: "btn btn-default" %>
-              </div>
-
 
               </div>
 
