--- a/app/views/collections/_innerform.html.erb
+++ b/app/views/collections/_innerform.html.erb
@@ -63,7 +63,7 @@
 
         count.value = parseInt(count.value) +1;
 
-        $("#tempTable").append("<div class=\"row\" id=\"row"+count.value+"\"> <div class=\"form-group col-xs-6\"> <input type=\"hidden\" name=\"temp"+count.value+"\" value=\""+selectValue+"\"> <input type=\"text\" name=\"temp"+count.value+"Text\" value=\""+selectText+"\" disabled> </div> <div class=\"form-group col-xs-3\"> <input type=\"number\" name=\"days"+count.value+"\" value=\""+days+"\" disabled> </div> <div class=\"form-group col-xs-3\"> <p class=\"rmTemp\" value=\""+count.value+"\" style=\"background-color: red;\" ><b>Remove</b></p> </div> </div>")
+        $("#tempTable").append("<div class=\"row\" id=\"row"+count.value+"\"> <div class=\"form-group col-xs-6\"> <input type=\"hidden\" name=\"temp"+count.value+"\" value=\""+selectValue+"\"> <input type=\"text\" name=\"temp"+count.value+"Text\" value=\""+selectText+"\" disabled> </div> <div class=\"form-group col-xs-3\"> <input type=\"hidden\" name=\"offset"+count.value+"\" value=\""+days+"\"> <input type=\"text\" name=\"days"+count.value+"\" value=\""+days+"\" disabled> </div> <div class=\"form-group col-xs-3\"> <p class=\"rmTemp\" value=\""+count.value+"\" style=\"background-color: red;\" ><b>Remove</b></p> </div> </div>")
 
     });
     $(document).on('click', ".rmTemp", function(e) {
