--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -94,6 +94,11 @@
               <% end%>
             </td>
           </tr>
+          <tr>
+            <td>
+              <%= render 'checklists/new' %>
+            </td>
+          </tr>
 
 
           </tbody>
