a;adir ver colletios al buscador, sacar icono del form, agregar temps al index de collection y elmniar el show y redirigir a index

--- a/app/views/collections/_innerform.html.erb
+++ b/app/views/collections/_innerform.html.erb
@@ -13,12 +13,12 @@
     <%= m.text_area :description, class: "form-control", 'data-validation':"required" %>
   </div>
 
-  <div class="row">
+  <!--<div class="row">
     <div class="form-group col-xs-6">
-      <%=  m.label t('icon'), class: "control-label" %>
+      <%  m.label t('icon'), class: "control-label" %>
       <button name="collection[icon]" class="btn btn-default" role="iconpicker" data-icon="glyphicon-flag"></button>
     </div>
-  </div>
+  </div>-->
 
   <div class="row">
     <div class="form-group col-xs-6">
