--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -12,6 +12,7 @@
           <tr>
             <td class="title_row" ><%= t('title') %></td>
             <td class="description_row"><%= t('description') %></td>
+            <td class="description_row"><%= t('collections.templates') %></td>
             <td><%= t('actions') %></td>
           </tr>
           </thead>
@@ -19,12 +20,20 @@
           <% @collections.each do |m| %>
               <tr>
                 <td class="description_row">
-                  <%= link_to m.title, collection_path(m), method: :get %>
+                  <% link_to m.title, collection_path(m), method: :get %>
+                  <%=m.title%>
                 </td>
                 <td class="description_row">
                   <%= m.description %>
                 </td>
 
+                <td>
+                  <ul>
+                  <% m.collection_templates.each do |c| %>
+                    <li><%= "#{c.template.title} (#{c.days})" %></li>
+                  <% end %>
+                  </ul>
+                </td>
                 <td>
                   <%= link_to collections_destroy_path(id: m.id),
                               data: { confirm: t('collections.delete.sure') } do %>
