--- a/app/assets/stylesheets/_projects.scss.erb
+++ b/app/assets/stylesheets/_projects.scss.erb
@@ -3,6 +3,7 @@
     border-bottom: 3px solid $peterriver;
     padding: 0px 30px 30px 30px;
     background-color: white;
+    li {list-style-type: none;}
 
     h1 {
         color: white;
@@ -30,18 +31,7 @@
         }
     }
 
-    #buttonTwo {
-        border-radius: 0;
-        background-color: $peterriver;
-        border: none;
-        color: white;
 
-        &:active, &:focus {
-            background-color: $peterriver-focus;
-            color: white;
-            box-shadow: none;
-        }
-    }
 
 
 
@@ -63,3 +53,4 @@
         }
     }
 }
+
