Se agrega paginacion a listado de usuarios

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -63,6 +63,7 @@
 
             </tbody>
           </table>
+          <%= will_paginate @people %>
       <% else %>
           <div class="zero"><%= t('people.list.zero') %></div>
       <% end %>
