Se agrega paginado a roles tecnicos

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -40,7 +40,7 @@
           <% end %>
           </tbody>
         </table>
-        <%= will_paginate @category %>
+        <%= will_paginate @tags %>
       </div>
 
 
