Se agrega paginacion a los templates

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -53,6 +53,7 @@
           <% end %>
           </tbody>
         </table>
+        <%= will_paginate @template %>
       </div>
       <br>
       <br>
