--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,11 +2,7 @@
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
       <div id="div_project">
-        <h1><span class="glyphicon glyphicon-check"></span><%= t('project.view') %>
-          <%= link_to edit_project_path(@project) do %>
-            <span class="edit glyphicon glyphicon-edit" style="color:white"></span>
-          <% end %>
-        </h1>
+        <h1><span class="glyphicon glyphicon-check"></span><%= t('project.view') %></h1>
         <table class="table table-striped">
           <tbody>
           <tr>
@@ -15,6 +11,11 @@
                 <%= t('project.name') %>
               </label>
               <%= @project.name %>
+              <% if current_user_admin? %>
+                <%= link_to edit_project_path(@project) do %>
+                  <span class="edit glyphicon glyphicon-edit"></span>
+                <% end %>
+              <% end %>
             </td>
           </tr>
           <tr>
