--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -33,6 +33,15 @@
 
         }
     }
+    tbody tr{
+        /*&:nth-child(2n) {
+            background-color: $body-background-dark;
+        }*/
+        &:nth-child(2n+1) {
+            background-color: ghostwhite;
+        }
+    }
+
     .calendar{
         margin-left: 0px;
     }
