--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -10,10 +10,10 @@
         <table class="table datatable table-striped" id="colecciones" data-info="false">
           <thead>
           <tr>
-            <td class="title_row" ><%= t('title') %></td>
-            <td class="description_row"><%= t('description') %></td>
-            <td class="description_row"><%= t('collections.templates') %></td>
-            <td><%= t('actions') %></td>
+            <th class="title_row" ><%= t('title') %></th>
+            <th class="description_row"><%= t('description') %></th>
+            <th class="description_row"><%= t('collections.templates') %></th>
+            <th><%= t('actions') %></th>
           </tr>
           </thead>
           <tbody>
