--- a/app/views/tech_roles/index.html.erb
+++ b/app/views/tech_roles/index.html.erb
@@ -16,10 +16,9 @@
 
           <thead>
           <tr>
-            <td><%= t('id') %></td>
-            <td><%= t('name') %></td>
-            <td></td>
-            <td></td>
+            <th><%= t('id') %></th>
+            <th><%= t('name') %></th>
+            <th></th>
           </tr>
           </thead>
           <tbody>
@@ -28,15 +27,15 @@
                 <td><%= t.id %></td>
                 <td><%= t.name %></td>
                 <% if current_user_admin? %>
-                    <td><%= link_to edit_tech_role_path(t) do%>
+                    <td class="text-right"><%= link_to edit_tech_role_path(t) do%>
                           <span class='large-text glyphicon glyphicon-pencil'></span>
                       <% end %>
-                    </td>
-                    <td><%= link_to tech_role_path(t),
+                    <%= link_to tech_role_path(t),
                                     method: :delete,
                                     data: { confirm: t('tech_roles.delete.sure') } do %>
                           <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
+                      &nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
                 <%else%>
                     <td></td>
