fondo gris a milestones edit y otros detalles

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -43,7 +43,7 @@
                   </ul>
                 </td>
 
-                <td>
+                <td class="text-center">
                       <%= link_to templates_destroy_path(template_id: m.id),
                                   data: { confirm: t('templates.delete.sure') } do %>
                           <span class='large-text glyphicon glyphicon-trash'></span>
