--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <th><%= t('id') %></th>
             <th><%= t('name') %></th>
-            <th></th>
+            <th><%= t('milestones.actions') %></th>
           </tr>
           </thead>
           <tbody>
@@ -24,7 +24,8 @@
               <tr>
                 <td><%= t.id %></td>
                 <td><%= t.name %></td>
-                <td class="text-right"><%= link_to edit_tag_path(t) do%>
+                <td>
+                  <%= link_to edit_tag_path(t) do%>
                       <span class='large-text glyphicon glyphicon-pencil'></span>
                   <% end %>
                 <%= link_to tag_path(t),
@@ -32,7 +33,6 @@
                                 data: { confirm: t('tags.delete.sure') } do %>
                       <span class='large-text glyphicon glyphicon-trash'></span>
                   <% end %>
-                  &nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
 
               </tr>
