--- a/app/views/tech_roles/index.html.erb
+++ b/app/views/tech_roles/index.html.erb
@@ -18,7 +18,7 @@
           <tr>
             <th><%= t('id') %></th>
             <th><%= t('name') %></th>
-            <th></th>
+            <th><%= t('milestones.actions') %></th>
           </tr>
           </thead>
           <tbody>
@@ -27,7 +27,8 @@
                 <td><%= t.id %></td>
                 <td><%= t.name %></td>
                 <% if current_user_admin? %>
-                    <td class="text-right"><%= link_to edit_tech_role_path(t) do%>
+                    <td>
+                      <%= link_to edit_tech_role_path(t) do%>
                           <span class='large-text glyphicon glyphicon-pencil'></span>
                       <% end %>
                     <%= link_to tech_role_path(t),
@@ -35,7 +36,6 @@
                                     data: { confirm: t('tech_roles.delete.sure') } do %>
                           <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
-                      &nbsp;&nbsp;&nbsp;&nbsp;
                     </td>
                 <%else%>
                     <td></td>
