--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -269,6 +269,11 @@
 
 .datatable{
 
+    .icon-row {
+        width: 26px;
+        font-size: 32px;
+    }
+
     .description_row, .title_row{
 
         max-width: 160px;
