--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,98 +1,17 @@
 <div class="container">
+
   <div class="row">
-
-    <div class="table-container" id="mentees_table">
-
-    <h1><%= t('dashboard.mentees.header')  %></h1>
-    <% if @my_mentees.any? %>
-        <table class="table datatable" data-info="false">
-          <thead>
-          <tr>
-            <td></td>
-            <td><%= t('dashboard.name') %></td>
-            <td><%= t('dashboard.last_completed_milestones') %></td>
-
-          </tr>
-          </thead>
-          <tbody>
-
-          <% @my_mentees.each do |m| %>
-              <tr>
-                <td>
-                  <div id="profile-picture-<%= m.id %>" class="profile_picture">
-                    <div class="img-container">
-                      <%= person_picture m.image_id %>
-                      </div>
-                    </div>
-                </td>
-                <td><%= link_to m.name, person_path(m.id), method: :get%></td>
-                <td>
-                  <ul>
-                  <%
-                     miles = m.milestones.where("status = ?", Milestone.statuses[:done]).order("due_date ASC, created_at DESC").limit(3)
-                     if miles.length > 0
-                         miles.each do |mil| %>
-
-                            <li><%= link_to mil.title, milestone_path(mil), method: :get%></li>
-
-                        <% end
-                     else %>
-
-                       <%= t('milestones.completed.zero') %>
-                    <% end %>
-                  </ul>
-                </td>
-              </tr>
-          <% end %>
-
-          </tbody>
-        </table>
-    <% else %>
-          <div class="zero"><%= t('dashboard.mentees.zero') %></div>
-    <% end %>
-    </div>
-
-
-    <div class="table-container" id="milestones_table">
-
-      <h1><%= t('dashboard.milestones.header')  %></h1>
-      <% if @my_milestones.any? %>
-
-          <table class="table datatable" data-info="false">
-            <thead>
-            <tr>
-              <td><%= t('dashboard.name')  %></td>
-              <td><%= t('dashboard.description')  %></td>
-              <td><%= t('dashboard.due_time')  %></td>
-            </tr>
-            </thead>
-            <tbody>
-
-            <% @my_milestones.each do |mil| %>
-                <tr>
-                  <td><%= link_to mil.title, milestone_path(mil), method: :get%></td>
-                  <td><%= mil.description.truncate(50) %></td>
-                  <td>
-
-                  <% if mil.due_date != nil %>
-                    <div class="calendar left">
-                  <%= l(mil.due_date, format: "%A, %B %d %Y") %>
-                    </div>
-                  <% end %>
-
-                  </td>
-                </tr>
-            <% end %>
-
-            </tbody>
-          </table>
-      <% else %>
-          <div class="zero"><%= t('dashboard.milestones.zero') %></div>
+    <div class="col-xs-12">
+      <% if @show_review_table %>
+        <%= render "review_table" %>
       <% end %>
-
     </div>
+  </div>
 
-
-
+  <div class="row">
+    <div class="col-xs-12">
+      <%= render "mentees_table" %>
+      <%= render "pending_milestones_table" %>
+    </div>
   </div>
 </div>
