--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -114,11 +114,12 @@
     clear: both;
 }
 
-#milestone-notes {
+.milestone-container {
     background-color: $body-background;
     color:#34495E;
-    padding: 20px;
-    padding-bottom: 0;
+    padding: 20px 20px 10px;
+    margin-bottom: 15px;
+
 
     form {
 
