--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -55,7 +55,7 @@ body {
 @import "milestones";
 @import "dashboard";
 @import "projects";
-@import "checklists";
+@import "checklists_items";
 
 
 .tt-hint {
